--- a/TranslationReg/Style/cards/docCard.css
+++ b/TranslationReg/Style/cards/docCard.css
@@ -1,11 +1,11 @@
 ﻿/*------------------------------------ карточка документа ------------------------------------*/
 .doc-card-container {
-    padding: 5px;
+    padding: 3px;
     height: 100%;
 }
 
     .doc-card-container .doc-card {
-        width: 190px;
+        width: 220px;
         background-color: #ffffff;
         text-align: center;
         vertical-align: top;
@@ -14,16 +14,16 @@
         box-shadow: 1px 2px 3px 0px rgba(0, 0, 0, 0.2);
     }
 
-.doc-img-icons {
+.doc-card-content {
     display: flex;
     justify-content: space-between;
     align-content: center;
-    padding: 0 6px;
+    padding: 0 2px;
 }
 
 .doc-card img {
-    width: 100px;
-    height: 100px;
+    width: 70px;
+    height: 70px;
     float: left;
     padding: 5px;
 }
@@ -32,37 +32,61 @@
 .doc-card-header {
     background-color: #5580aa;
     display: flex;
-    text-align: center;
-    align-content: center;
+    flex-flow: row wrap;
     font-size: 14px;
     color: white;
 }
 
-.doc-next-stage{
+
+.doc-next-stage {
     justify-content: center;
 }
 
 .doc-next-stage {
-    height: 32px;
+    height: 24px;
 }
 
 .doc-card-header {
     min-height: 36px;
-    padding: 0 10px;
-    display:flex;
+    padding: 0 4px;
+    display: flex;
     justify-content: center;
 }
 
     .doc-card-header p {
         align-self: center;
-        margin:0px;
+        margin: 0px;
+        font-weight: 500;
+        font-size: 13px;
         padding: 3px 0;
+        width: 184px;
+    }
+
+    .doc-card-header i {
+        align-self: center;
+        font-size: 20px;
     }
 
 .doc-next-stage i,
 .doc-next-stage span {
     align-self: center;
 }
+
+.doc-card-file {
+    min-height: 40px;
+}
+
+    .doc-card-file span {
+        width: 80px;
+        text-align: left;
+        align-self: center;
+    }
+
+    .doc-card-file a > i {
+        font-size: 22px;
+        padding: 3px;
+        align-self: center;
+    }
 
 .doc-next-stage:hover i,
 .doc-next-stage:hover span {
@@ -87,6 +111,7 @@
     max-width: 40px;
     padding: 5px;
 }
-.icons-column i{
-    color:#337ab7;
-}
+
+    .icons-column i {
+        color: #337ab7;
+    }
