--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -3,7 +3,7 @@
 <!-- ЗАГОЛОВОК И КНОПКА РЕДАКТИРОВАНИЯ -->
 <h2 class="iconed-text">
     Проект: @Model.Name
-    <a data-href="/Projects/EditModal/@Model.Id"><i class="material-icons right-icon loadModal">edit</i></a>
+    <i data-href="/Projects/EditModal/@Model.Id" class="material-icons right-icon loadModal">edit</i>
 </h2>
 
 <!-- ФИЛЬТРЫ -->
@@ -42,6 +42,33 @@
 <!-- ОБЛАСТЬ ДОБАВЛЕНИЯ -->
 <div id="addArea" class="dynamicBlock dynamic-block-create"></div>
 
+<div class="worktype-container">
+    <div class="worktype-header">
+        <div class="tableMaterial">
+            <div class="titles pointer toggle-stage-panel">
+                <div class="worktype-name">
+                    Документы проекта
+                </div>
+                <div class="dropdown-btn " toggleid="docs" iconid="toggleIconDoc">
+                    <i class="material-icons" id="toggleIconDoc">expand_more</i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="worktype-content" id="docs">
+        <div class="docworks-container docs-panel">
+            @{ 
+                foreach (var doc in Model.Documents)
+                {
+                    @Html.Partial("../Documents/DocInProjectCard", doc)
+                }
+            }
+        </div>
+    </div>
+</div>
+
+
+
 <!-- ОСНОВНАЯ ОБЛАСТЬ -->
 @{
     // все стадии
@@ -62,11 +89,11 @@
                                 @currentWorkType.Name
                             </div>
 
-                            <div >
-                                Deadline:
-                                <input class="deadline" type="date" value="" id="@currentWorkType.Id" onchange="DeadlineSet(this)" required="required"/>
-                            </div>
-                            
+                            @*<div >
+                                    Deadline:
+                                    <input class="deadline" type="date" value="" id="@currentWorkType.Id" onchange="DeadlineSet(this)" required="required"/>
+                                </div>*@
+
                             <div class="dropdown-btn " toggleid="stageToggle@(currentWorkType.Id)" iconid="toggleIcon@(currentWorkType.Id)">
                                 <i class="material-icons" id="toggleIcon@(currentWorkType.Id)">expand_more</i>
                             </div>
@@ -80,38 +107,39 @@
                         // работы по документам
                         foreach (var oneDocStages in docedStages)
                         {
-                            <div class="docworks-container">
-                                @{
+                    <div class="docworks-container">
+                        @{
 
                                     //--------------------------------------------- ОТОБРАЖЕНИЕ ДОКОВ ------------------------------------------
+                                    var currentStage = oneDocStages.First();
                                     var currentDoc = oneDocStages.First().Document;
-                                    @Html.Partial("../Documents/Card", currentDoc)
+                                @Html.Partial("../Documents/Card", currentStage)
                                     //----------------------------------------------------------------------------------------------------------
 
                                     //--------------------------------------------- ТАБЛИЦА РАБОТ ------------------------------------------
                                     // работы по доку в стадии
                                     var typedDocWorks = oneDocStages.SelectMany(x => x.User_Stage);
                                     var stageId = oneDocStages.First().Id.ToString();
-                                    <div class="works-table">
-                                        <div class="tableMaterial">
-                                            <div class="work-titles pointer loadModal" data-href="/User_Stage/CreateModal/@stageId">
-                                                <div class="col-md-3 iconed-title">
-                                                    <i class="material-icons">add_circle</i>
-                                                    <span>
-                                                        Исполнитель
-                                                    </span>
-                                                </div>
-                                                <div class="col-md-5">Комментарий</div>
-                                                <div class="col-md-2">Количество</div>
-                                                <div class="col-md-2">Комманды</div>
+                                <div class="works-table">
+                                    <div class="tableMaterial">
+                                        <div class="work-titles pointer loadModal" data-href="/User_Stage/CreateModal/@stageId">
+                                            <div class="col-md-3 iconed-title">
+                                                <i class="material-icons">add_circle</i>
+                                                <span>
+                                                    Исполнитель
+                                                </span>
                                             </div>
+                                            <div class="col-md-5">Комментарий</div>
+                                            <div class="col-md-2">Количество</div>
+                                            <div class="col-md-2">Комманды</div>
                                         </div>
-                                        <div class="inner-padding">
-                                            @foreach (var work in typedDocWorks)
+                                    </div>
+                                    <div class="inner-padding">
+                                        @foreach (var work in typedDocWorks)
                                             {
-                                                <div class="properties">
-                                                    <div class="col-md-3">
-                                                        @if (work.User.AvatarPath == null)
+                                            <div class="properties">
+                                                <div class="col-md-3">
+                                                    @if (work.User.AvatarPath == null)
                                                         {
                                                             string avatarPath = Path.Combine(Helper.uploadDir, Helper.avatarsDir, Helper.defaultAvatar);
                                                         <img src="@Url.Content("~/"+ avatarPath)" class="small-icon user-icon" />
@@ -121,62 +149,66 @@
                                                         <img src="@Url.Content("~/"+ work.User.AvatarPath)" class="small-icon user-icon" />
                                                         }
 
-                                                        <span>
-                                                            @work.User.Name
-                                                        </span>
-                                                    </div>
-                                                    <div class="col-md-5">
-                                                        <span>
-                                                            @work.Comment
-                                                        </span>
-                                                    </div>
-                                                    <div class="col-md-2">
-                                                        <span>
-                                                            @work.Amount
-                                                        </span>
-                                                    </div>
-                                                    <div class="col-md-2">
-                                                        <div class="icons-container">
-                                                            @if (work.DocFileId != null)
+                                                    <span>
+                                                        @work.User.Name
+                                                    </span>
+                                                </div>
+                                                <div class="col-md-5">
+                                                    <span>
+                                                        @work.Comment
+                                                    </span>
+                                                </div>
+                                                <div class="col-md-2">
+                                                    <span>
+                                                        @work.Amount
+                                                    </span>
+                                                </div>
+                                                <div class="col-md-2">
+                                                    <div class="icons-container">
+                                                        @if (work.DocFileId != null)
                                                             {
-                                                            <div class="icons-container">
-                                                                <a href="@Url.Action("Download", "Documents", new { @filepath = work.DocFile.Path })">
-                                                                    <i class="material-icons">file_download</i>
-                                                                </a>
-                                                            </div>
+                                                            <a href="@Url.Action("Download", "Documents", new { @filepath = work.DocFile.Path })">
+                                                                <i class="material-icons">file_download</i>
+                                                            </a>
                                                             }
-                                                            <a class="loadModal" data-href="/User_Stage/AddResultFile/@work.Id">
-                                                                <i class="material-icons">cloud_upload</i>
+                                                            else
+                                                            {
+                                                            <a>
+                                                                <i class="material-icons disabled-icon">file_download</i>
                                                             </a>
-                                                            <a class="loadModal" data-href="/User_Stage/Edit/@work.Id">
-                                                                <i class="material-icons">edit</i>
-                                                            </a>
-                                                            <a class="loadModal" data-href="/User_Stage/Delete/@work.Id">
-                                                                <i class="material-icons">delete</i>
-                                                            </a>
-                                                        </div>
+                                                            }
+                                                        <a class="loadModal" data-href="/User_Stage/AddResultFile/@work.Id">
+                                                            <i class="material-icons">attach_file</i>
+                                                        </a>
+                                                        <a class="loadModal" data-href="/User_Stage/Edit/@work.Id">
+                                                            <i class="material-icons">edit</i>
+                                                        </a>
+                                                        <a class="loadModal" data-href="/User_Stage/Delete/@work.Id">
+                                                            <i class="material-icons">delete</i>
+                                                        </a>
                                                     </div>
                                                 </div>
+                                            </div>
                                             }
-                                        </div>
                                     </div>
-                                }
-                                <div style="clear:left"></div>
-                            </div>
+                                </div>
+                        }
+                    </div>
                                         //----------------------------------------------------------------------------------------------------------
                                     }
                     }
                 </div>
             </div>
-            <div style="clear:both"></div>
-                                        }
-
-                                    }
-
-
+                                }
+                            }
 }
 
 <style>
+
+    .docs-panel{
+        justify-content:space-between;
+    }
+
     .deadline {
         padding: 2px;
         vertical-align: middle;
@@ -186,15 +218,21 @@
         background: white;
         opacity: 0.7;
         font-size: 14px;
-        
     }
+
     ::-webkit-in {
         display: none;
     }
-    .deadline:hover{
-        opacity:1;
 
+    .deadline:hover {
+        opacity: 1;
     }
+
+    .toggle-stage-panel:hover i {
+        transition: 0.3s;
+        color: #c42d5b;
+    }
+
     .iconed-title {
         display: flex;
         flex-flow: row wrap;
@@ -301,61 +339,61 @@
         margin-left: 10px;
     }
 </style>
-<script>
+@*<script>
 
-    window.onload = function () {
+        window.onload = function () {
 
-        @if (stages != null && stages.Count() != 0)
-        {
-            var typedStages = stages.GroupBy(x => x.WorkTypeId);
-            foreach (var oneTypeStages in typedStages)
+            @if (stages != null && stages.Count() != 0)
             {
-                <text>
-                    DeadlineGet(@oneTypeStages.First().WorkType.Id);
-                </text>
+                var typedStages = stages.GroupBy(x => x.WorkTypeId);
+                foreach (var oneTypeStages in typedStages)
+                {
+                    <text>
+                        DeadlineGet(@oneTypeStages.First().WorkType.Id);
+                    </text>
+                }
             }
+
+        };
+
+        function DeadlineSet(obj) {
+
+            $.ajax({
+                url: '@Url.Action("DeadlineSet", "Projects")',
+                type: "get",
+                data: {
+                    project: @Model.Id, workTypeid: obj.id, deadline: obj.value
+                },
+                dataType: 'json',
+                success: function (data) {
+
+                },
+                error: function (jqXHR, exception) {
+                    alert("Ошибка обновления дедлайна, попробуйте позже");
+                    DeadlineGet(obj.id);
+                }
+
+            });
         }
+        function DeadlineGet(WorkTypeid) {
+            $.ajax({
+                url: '@Url.Action("DeadlineGet", "Projects")',
+                type: "get",
+                data: { project: @Model.Id, workTypeid: WorkTypeid  },
+                dataType: 'json',
+                success: function (data) {
 
-    };
+                    document.getElementById(WorkTypeid).value = data;
+                },
+                error: function (jqXHR, exception) {
+                    alert("Ошибка загрузки дедлайна, обновите страницу");
 
-    function DeadlineSet(obj) {
-        
-        $.ajax({
-            url: '@Url.Action("DeadlineSet", "Projects")',
-            type: "get",
-            data: {
-                project: @Model.Id, workTypeid: obj.id, deadline: obj.value
-            },
-            dataType: 'json',
-            success: function (data) {
-                
-            },
-            error: function (jqXHR, exception) {
-                alert("Ошибка обновления дедлайна, попробуйте позже");
-                DeadlineGet(obj.id);
-            }
-
-        });
-    }
-    function DeadlineGet(WorkTypeid) {
-        $.ajax({
-            url: '@Url.Action("DeadlineGet", "Projects")',
-            type: "get",
-            data: { project: @Model.Id, workTypeid: WorkTypeid  },
-            dataType: 'json',
-            success: function (data) {
-                
-                document.getElementById(WorkTypeid).value = data;
-            },
-            error: function (jqXHR, exception) {
-                alert("Ошибка загрузки дедлайна, обновите страницу");
-                
-            }
+                }
 
 
-        });
-    }
-</script>
+            });
+        }
+    </script>*@
 
 @section scripts {
     <script>
