--- a/TranslationReg/Views/Documents/Create.cshtml
+++ b/TranslationReg/Views/Documents/Create.cshtml
@@ -31,7 +31,7 @@
                 <input type="file" name="final" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Сохранить" class="btn btn-default btn-form btn-submit" />
+                <input type="submit" value="Добавить" class="btn btn-default btn-form btn-submit btn-modal-save" />
             </div>
 
         }
