--- a/TranslationReg/Views/Projects/Create.cshtml
+++ b/TranslationReg/Views/Projects/Create.cshtml
@@ -53,7 +53,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Сохранить" class="btn btn-submit btn-modal-save" id="addProjBtn"/>
+                <input type="submit" value="Добавить" class="btn btn-submit btn-modal-save" id="addProjBtn"/>
             </div>
         }
     </div>
