Обновление страницы после загрузки файлов, удаление документа в модальном окне по нажатию enter

--- a/TranslationReg/Views/Documents/Delete.cshtml
+++ b/TranslationReg/Views/Documents/Delete.cshtml
@@ -53,14 +53,25 @@
 
         <!-- Подтверждение\отмена -->
         <div class="modal-footer">
-            @using (Ajax.BeginForm("DeleteFromList", "Documents", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent"}))
+            @using (Ajax.BeginForm("DeleteFromList", "Documents", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent" }))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(x => x.Id)
 
-                <input type="submit" value="Удалить" class="btn btn-delete hide-modal btn-modal" />
+                <input id="Confirm" type="submit" value="Удалить" class="btn btn-delete hide-modal btn-modal" />
             }
             <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
         </div>
     </div>
 </div>
+<script>
+    document.onkeyup = function (e) {
+        e = e || window.event;
+        if (e.keyCode === 13) {
+            document.getElementById("Confirm").click();
+        }
+        return false;
+    }
+
+</script>
+	
