--- a/TranslationReg/Views/DocStages/Card.cshtml
+++ b/TranslationReg/Views/DocStages/Card.cshtml
@@ -39,7 +39,7 @@
                     {
                         <a><i class="material-icons disabled-icon">file_download</i></a>
                     }
-                    <a>
+                    <a class="loadModal" data-href="/DocStages/AddOriginalFile/@Model.Id">
                         <i class="material-icons">attach_file</i>
                     </a>
                 </div>
@@ -55,7 +55,7 @@
                     {
                         <a><i class="material-icons disabled-icon">file_download</i></a>
                     }
-                    <a>
+                    <a class="loadModal" data-href="/DocStages/AddFinalFile/@Model.Id">
                         <i class="material-icons">attach_file</i>
                     </a>
                 </div>
