--- a/TranslationReg/Style/buttons/filters.css
+++ b/TranslationReg/Style/buttons/filters.css
@@ -2,24 +2,29 @@
     list-style: none;
     padding: 0;
     margin-bottom: 15px;
+    display: flex;
+    flex-flow: wrap row;
+    justify-content: flex-start;
 }
 
     .filters li {
-        display: inline-block;
+        display: flex;
+        flex-flow: wrap row;
+        justify-content: center;
     }
 
         .filters li a {
-            display: block;
+            align-self:center;
             padding: 6px 10px;
             color: white;
             text-decoration: none;
-            transition: 0.3s;
             background-color: #3d5279;
-            box-shadow: 0px 3px 6px rgba(0,0,0,0.3);
+            box-shadow: 0px 2px 4px rgba(0,0,0,0.3);
             margin: 5px;
         }
 
             .filters li a:hover {
+                transition: 0.3s;
                 background: #c42d5b;
             }
 
