--- a/TranslationReg/Style/style.css
+++ b/TranslationReg/Style/style.css
@@ -14,7 +14,7 @@ body {
 h2 {
     color: #282828;
     align-self: center;
-    margin: 10px 10px 20px 10px;
+    margin: 10px 10px 10px 0;
     font-size: 1.71429em;
     font-weight: 500;
     letter-spacing: -0.01em;
