--- a/TranslationReg/Views/Documents/Delete.cshtml
+++ b/TranslationReg/Views/Documents/Delete.cshtml
@@ -53,7 +53,7 @@
 
         <!-- Подтверждение\отмена -->
         <div class="modal-footer">
-            @using (Ajax.BeginForm("DeleteFromList", "Documents", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent"}))
+            @using (Ajax.BeginForm("Delete", "Documents", new AjaxOptions { HttpMethod = "Post", UpdateTargetId = "partialContent"}))
             {
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(x => x.Id)
