--- a/TranslationReg/Views/Documents/DocInProjectCard.cshtml
+++ b/TranslationReg/Views/Documents/DocInProjectCard.cshtml
@@ -3,7 +3,7 @@
     <div class="doc-card">
         <div class="doc-card-header">
             <p style="margin:0;">@Model.Name</p>
-            <i class="material-icons loadModal" data-href="/Document/Delete/@Model.Id">delete</i>
+            <i class="material-icons loadModal" data-href="/Documents/Delete/@Model.Id">delete</i>
         </div>
         <div class="doc-card-content">
             @{
@@ -32,6 +32,9 @@
                     <a href="@Url.Action("Download", "Documents", new { @filepath = Model.OriginalFile.Path })">
                         <i class="material-icons">file_download</i>
                     </a>
+                    <a class="loadModal" data-href="/Documents/AddOriginalFile/@Model.Id">
+                        <i class="material-icons">attach_file</i>
+                    </a>
                 </div>
                 <div class="flex-row">
                     <span>Финальный</span>
@@ -45,11 +48,13 @@
                     {
                         <a><i class="material-icons disabled-icon">file_download</i></a>
                     }
+                    <a class="loadModal" data-href="/Documents/AddFinalFile/@Model.Id">
+                        <i class="material-icons">attach_file</i>
+                    </a>
                 </div>
             </div>
         </div>
 
-        <div class="doc-next-stage">
-        </div>
+        <div class="doc-card-footer"></div>
     </div>
 </div>
