--- a/TranslationReg/Views/Shared/_LoginPartial.cshtml
+++ b/TranslationReg/Views/Shared/_LoginPartial.cshtml
@@ -38,7 +38,7 @@
 
 <style>
     .hello {
-        font-size: 16px;
+        font-size: 14px;
         text-align: center;
         display: block;
         margin: auto;
@@ -51,6 +51,9 @@
     }
 
         .avatar-container > img {
+            height:70px;
+            width:70px;
+            border-radius: 150px;
             align-self: center;
             display: block;
             margin: auto;
