--- a/TranslationReg/Views/User_Stage/Delete.cshtml
+++ b/TranslationReg/Views/User_Stage/Delete.cshtml
@@ -40,10 +40,11 @@
 
         <!-- Подтверждение\отмена -->
         <div class="modal-footer">
-            @using (Ajax.BeginForm("DeleteFromTasks", "User_Stage", new AjaxOptions {HttpMethod = "Post", UpdateTargetId = "partialContent" }))
+            @*@using (Ajax.BeginForm("Delete", "User_Stage", new AjaxOptions {HttpMethod = "Post", UpdateTargetId = "partialContent" })) *@
+            @using (Html.BeginForm("Delete", "User_Stage", FormMethod.Post))
             {
                 @Html.AntiForgeryToken()
-                @Html.HiddenFor(x=>x.Id)
+                @Html.HiddenFor(x => x.Id)
                 <input type="submit" value="Удалить" class="btn btn-delete hide-modal btn-modal" />
             }
             <button type="button" class="btn btn-default btn-cancel btn-modal" data-dismiss="modal">Отмена</button>
