--- a/TranslationReg/Views/User_Stage/List.cshtml
+++ b/TranslationReg/Views/User_Stage/List.cshtml
@@ -3,7 +3,7 @@
     <div class="titles">
         <div class="col-md-2">Проект</div>
         <div class="col-md-2">Документ</div>
-        <div class="col-md-1">Оригинал</div>
+        <div class="col-md-1">Исходник</div>
         <div class="col-md-3">Комментарий</div>
         <div class="col-md-1">Объем</div>
         <div class="col-md-1">Дедлайн</div>
