--- a/TranslationReg/Views/User_Stage/ListItem.cshtml
+++ b/TranslationReg/Views/User_Stage/ListItem.cshtml
@@ -49,7 +49,7 @@
     <div class="col-md-1">
         <div class="icons-container">
             <a class="loadModal" data-href="/User_Stage/AddResultFile/@Model.Id">
-                <i class="material-icons">file_upload</i>
+                <i class="material-icons">attach_file</i>
             </a>
         </div>
     </div>
@@ -58,8 +58,14 @@
     <!-- Команды -->
     <div class="col-md-2">
         <div class="icons-container">
+            @if (true)
+            {
+                <a href="@Url.Action("Download", "Documents", new { @filepath = Model.Stage.Original.Path })">
+                    <i class="material-icons">file_download</i>
+                </a>
+            }
             <a class="loadModal" data-href="/User_Stage/AddResultFile/@Model.Id">
-                <i class="material-icons">file_upload</i>
+                <i class="material-icons">attach_file</i>
             </a>
             <a class="loadModal" data-href="/User_Stage/Edit/@Model.Id" data-ajax-update="#@(Model.Id)">
                 <i class="material-icons">mode_edit</i>
