--- a/TranslationReg/Views/User_Stage/ListItemEdit.cshtml
+++ b/TranslationReg/Views/User_Stage/ListItemEdit.cshtml
@@ -2,9 +2,10 @@
 
 <div class="modal-dialog">
     <div class="modal-content">
-        @using (Ajax.BeginForm("Edit", "User_Stage",
-            new AjaxOptions { HttpMethod= "Post", UpdateTargetId= "tasksList" },
-            new { enctype = "multipart/form-data" }))
+        @*@using (Ajax.BeginForm("Edit", "User_Stage",
+            new AjaxOptions { HttpMethod= "Post", UpdateTargetId= "partialContent" },
+            new { enctype = "multipart/form-data" }))*@
+        @using (Html.BeginForm("Edit", "User_Stage", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
             <!-- Хедер -->
             <div class="modal-header blue-modal-header">
