--- a/TranslationReg/Views/Account/Login.cshtml
+++ b/TranslationReg/Views/Account/Login.cshtml
@@ -15,30 +15,31 @@
 </head>
 <body>
     <div class="content-container padding-container">
-        <h2>Авторизация</h2>
-        <div class="dynamic-block-create">
+        
+        <div class="login-form dynamic-block-create">
+            <h2>Авторизация</h2>
             @using (Html.BeginForm())
-            {
-                @Html.AntiForgeryToken()
+    {
+        @Html.AntiForgeryToken()
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Name, "Логин")
-                    @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-                </div>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.Name, "Логин")
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+        </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Password, "Пароль")
-                    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
-                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Password, "Пароль")
+            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+        </div>
 
-                <div class="">
-                    <a href="/Account/Register" class="btn btn-default btn-form">К регистрации</a>
-                    <input type="submit" value="Войти" class="btn btn-default btn-form"/>
-                </div>
-            }
+        <div style="margin-left:109px">
+            <a href="/Account/Register" class="btn btn-default btn-form">К регистрации</a>
+            <input type="submit" value="Войти" class="btn btn-default btn-form" style="float:left; margin-left:100px; background:#0AC986; color:#FFF"   />
+        </div>
+}
         </div>
     </div>
     @Scripts.Render("~/bundles/jquery")
@@ -47,4 +48,49 @@
 </body>
 
 <style>
+    .btn {
+        margin: 10px;
+    }
+    .login-form {
+        
+        padding: 40px 30px;
+        background: #fff;
+        -moz-border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border-radius: 4px;
+        margin: auto;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+       
+    }
+
+.form-group {
+  position: relative;
+  margin-bottom: 15px;
+}
+
+.form-control {
+  width: 100%;
+  height: 50px;
+  border: none;
+  padding: 5px 7px 5px 15px;
+  background: #fff;
+  color: #666;
+  border: 2px solid #ddd;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+}
+.form-control:focus, .form-control:focus + .fa {
+  border-color: #10CE88;
+  
+}
+
+
+
+
+
 </style>
