--- a/TranslationReg/Views/Account/Register.cshtml
+++ b/TranslationReg/Views/Account/Register.cshtml
@@ -14,7 +14,7 @@
           rel="stylesheet">
 </head>
 <body>
-    <div class="dynamic-block-create padding-container">
+    <div class="Auth-form dynamic-block-create padding-container">
         <h2>Регистрация</h2>
         @using (Html.BeginForm("Register", "Account", null, FormMethod.Post, new { enctype = "multipart/form-data" }))
         {
@@ -24,30 +24,30 @@
 
             <div class="form-group">
                 @Html.LabelFor(model => Model.Name, "Логин *")
-                @Html.EditorFor(model => Model.Name)
+                @Html.EditorFor(model => Model.Name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => Model.Name)
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.Password, "Пароль *")
-                @Html.EditorFor(model => model.Password)
+                @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Password)
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.ConfirmPassword, "Подтверждение пароля *")
-                @Html.EditorFor(model => model.ConfirmPassword)
+                @Html.EditorFor(model => model.ConfirmPassword, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ConfirmPassword)
             </div>
 
 
             <div class="form-group">
                 @Html.Label("Файл аватарки")
-                <input type="file" name="avatar" accept="image/*" />
+                <input type="file" name="avatar" accept="image/*" class="input"/>
             </div>
             <div>
                 <a href="/Account/Login" class="btn btn-default btn-form">К авторизации</a>
-                <input type="submit" value="Зарегистрироваться" class="btn btn-default btn-form" style="float:left; margin-left:100px;"/>
+                <input type="submit" value="Зарегистрироваться" class="btn btn-default btn-form" style="float:left; margin-left:100px; background:#0AC986; color:#FFF"/>
             </div>
         }
     </div>
@@ -55,3 +55,42 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/bootstrap")
 </body>
+<style>
+    .btn{
+        margin:10px;
+    }
+    .input{
+        font-size:14px;
+    }
+    .Auth-form {
+        padding: 40px 30px;
+        background: #fff;
+        -moz-border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border-radius: 4px;
+        margin: auto;
+        position: absolute;
+        left: 0;
+        right: 0;
+        top: 50%;
+        -webkit-transform: translateY(-50%);
+    }
+
+    .form-group {
+        position: relative;
+        margin-bottom: 15px;
+    }
+
+    .form-control {
+        width: 100%;
+        height: 50px;
+        border: none;
+        padding: 5px 7px 5px 15px;
+        background: #fff;
+        color: #666;
+        border: 2px solid #ddd;
+        -moz-border-radius: 4px;
+        -webkit-border-radius: 4px;
+        border-radius: 4px;
+    }
+</style>
