--- a/TranslationReg/Views/Analytics/Filters.cshtml
+++ b/TranslationReg/Views/Analytics/Filters.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TranslationReg.Models.ReportModel
 @{ViewBag.Title = "Отчеты";}
-<div class="dynamic-block-create">
+<div class="dynamic-block-create blure">
     @using (Html.BeginForm("Report", "Analytics", FormMethod.Post))
     {
         @Html.AntiForgeryToken()
@@ -15,12 +15,12 @@
 
         <div class="form-group">
             @Html.Label("Дата от")
-            <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom.ToString("yyyy-MM-dd")" id="dateFrom" onchange="DateChanged()">
+            <input type="date" name="filters.PeriodFrom" value="@Model.DateFrom.ToString("yyyy-MM-dd")" id="dateFrom" onchange="DateChanged()" class="form-control" required>
         </div>
 
         <div class="form-group">
             @Html.Label("Дата до")
-            <input type="date" name="filters.PeriodTo" value="@Model.DateTo.ToString("yyyy-MM-dd")" id="dateTo">
+            <input type="date" name="filters.PeriodTo" value="@Model.DateTo.ToString("yyyy-MM-dd")" id="dateTo" class="form-control" required>
         </div>
 
         <div class="form-group">
@@ -38,7 +38,7 @@
             @Html.DropDownList("filters.workTypeId", Model.WorkTypeList, new { htmlAttributes = new { @class = "form-control", required = "required" } })
         </div>
 
-        <input type="submit" value="Сформировать отчет" class="btn btn-default btn-form" />
+        <input type="submit" value="Сформировать отчет" class="btn btn-default btn-form" style="margin-top:10px; margin-bottom:-13px" />
         
     }
 </div>
@@ -150,3 +150,15 @@
     // Название вкладки
     document.title = '@ViewBag.Title';
 </script>
+<style>
+    .form-control {
+        border: none;
+    }
+    .blure {
+        margin-bottom:20px;
+        padding-top: 17px;
+        background-image: url(../style/images/whitebg.png);
+          
+    }
+      
+</style>
