--- a/TranslationReg/Views/Projects/Project.cshtml
+++ b/TranslationReg/Views/Projects/Project.cshtml
@@ -249,16 +249,16 @@
     .worktype-container {
         margin-bottom: 20px;
         width: 100%;
-        height: 100%;
         clear: left;
     }
 
     .works-table .tasks-content {
         /*margin: 0 6px 6px 6px;*/
+        margin-bottom: 4px;
         border-bottom-left-radius: 6px;
         border-bottom-right-radius: 6px;
         overflow: hidden;
-        box-shadow: 1px 2px 3px 1px rgba(0, 0, 0, 0.2);
+        box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
     }
 
         .works-table .tasks-content .properties {
