--- a/TranslationReg/Views/DocStages/Delete.cshtml
+++ b/TranslationReg/Views/DocStages/Delete.cshtml
@@ -4,13 +4,13 @@
 
         <!-- Хедер -->
         <div class="modal-header delete-header">
-            <h4 class="modal-title">Удаление стадии "@Model.WorkType.Name"</h4>
+            <h4 class="modal-title">Удаление стадии</h4>
             <i data-dismiss="modal" class="material-icons close">clear</i>
         </div>
 
         <!-- Тело -->
         <div class="modal-body">
-            <h3>Вы уверены, что хотите удалить данную запись?</h3>
+            <h3>Вы уверены, что хотите удалить стадию "@Model.WorkType.Name"?</h3>
             <div class="modal-row">
                 <div class="modal-property"><p>Тип работ:</p></div>
                 <div class="modal-value">
