--- a/TranslationReg/Views/LanguagePairs/Delete.cshtml
+++ b/TranslationReg/Views/LanguagePairs/Delete.cshtml
@@ -5,13 +5,13 @@
 
         <!-- Хедер -->
         <div class="modal-header  delete-header">
-            <h4 class="modal-title">Удаление языковой пары "@Model.Name"</h4>
+            <h4 class="modal-title">Удаление языковой пары</h4>
             <i data-dismiss="modal" class="material-icons close">clear</i>
         </div>
 
         <!-- Тело -->
         <div class="modal-body">
-            <h3>Вы уверены, что хотите удалить данную запись?</h3>
+            <h3 align="center">Вы уверены, что хотите удалить языковую пару "@Model.Name"?</h3align="center">
             <div class="modal-row">
                 <div class="modal-property"><p>Название:</p></div>
                 <div class="modal-value">
