--- a/TranslationReg/Views/User_Stage/Delete.cshtml
+++ b/TranslationReg/Views/User_Stage/Delete.cshtml
@@ -11,7 +11,7 @@
 
         <!-- Тело -->
         <div class="modal-body">
-            <h3>Вы уверены, что хотите удалить данную запись?</h3>
+            <h3 align="center">Вы уверены, что хотите удалить исполнителя @Model.User.Name в документе "@Model.Stage.Document.Name"?</h3>
             <div class="modal-row">
                 <div class="modal-property"><p>Исполнитель:</p></div>
                 <div class="modal-value">
