--- a/TranslationReg/Views/WorkTypes/Delete.cshtml
+++ b/TranslationReg/Views/WorkTypes/Delete.cshtml
@@ -4,13 +4,13 @@
 
         <!-- Хедер -->
         <div class="modal-header  delete-header">
-            <h4 class="modal-title">Удаление типа работ "@Model.Name"</h4>
+            <h4 class="modal-title">Удаление типа работ</h4>
             <i data-dismiss="modal" class="material-icons close">clear</i>
         </div>
 
         <!-- Тело -->
         <div class="modal-body">
-            <h3>Вы уверены, что хотите удалить данную запись?</h3>
+            <h3 align="center">Вы уверены, что хотите удалить тип работы "@Model.Name"?</h3>
             <div class="modal-row">
                 <div class="modal-property"><p>Название:</p></div>
                 <div class="modal-value">
