Сохранение выбранного пункта фильтра на страницах в сессии

--- a/TranslationReg/Views/User_Stage/Tasks.cshtml
+++ b/TranslationReg/Views/User_Stage/Tasks.cshtml
@@ -7,10 +7,10 @@
 <div class="buttonsContainer">
     <ul class="filters">
         <li>
-            <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#tasksList" href="/User_stage/InWork">Текущие задачи</a>
+            <a id ="filter1" class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#tasksList" href="/User_Stage/InWork">Текущие задачи</a>
         </li>
         <li>
-            <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#tasksList" href="/User_stage/Done">Выполненные задачи</a>
+            <a id ="filter2" class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#tasksList" href="/User_Stage/Done">Выполненные задачи</a>
         </li>
     </ul>
 </div>
