--- a/TranslationReg/Views/Documents/Index.cshtml
+++ b/TranslationReg/Views/Documents/Index.cshtml
@@ -13,17 +13,17 @@
 <div class="buttonsContainer">
     <ul class="filters">
         <li>
-            <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/All">
+            <a id ="filter1" class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/All">
                 Все документы
             </a>
         </li>
         <li>
-            <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/My">
+            <a id ="filter2" class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/My">
                 Мои документы
             </a>
         </li>
         <li>
-            <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/InWork">
+            <a id ="filter3" class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#docList" href="/Documents/InWork">
                 Мои рабочие документы
             </a>
         </li>
