--- a/TranslationReg/Views/Projects/Index.cshtml
+++ b/TranslationReg/Views/Projects/Index.cshtml
@@ -14,13 +14,13 @@
 <div class="buttonsContainer">
     <ul class="filters">
         <li>
-            <a class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/InWork">Проекты в работе</a>
+            <a id ="filter1" class="filter filter-active" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/InWork">Проекты в работе</a>
         </li>
         <li>
-            <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/All">Все проекты</a>
+            <a id ="filter2" class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/All">Все проекты</a>
         </li>
         <li>
-            <a class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/Done">Закрытые проекты</a>
+            <a id ="filter3" class="filter" data-ajax="true" data-ajax-mode="replace" data-ajax-update="#projectList" href="/Projects/Done">Закрытые проекты</a>
         </li>
     </ul>
 </div>
